<resources>
    <string name="app_name">MatchMania</string>
    <string name="play">Play</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="score">Score</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_login">Login to Play Match Mania</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="blue_back">Blue Back</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="attempts_remaining">Attempts Remaining: </string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>